--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -167,7 +167,7 @@ footer {
 }
 
 .contact-button {
-  width: 50%;
+  width: 200px;
   display: inline-block;
   padding: 10px;
   background-color: transparent;
