--- a/client/src/assets/css/Parallax.css
+++ b/client/src/assets/css/Parallax.css
@@ -1,5 +1,6 @@
 .parallax-completo {
   width: 100%;
+  height: 100vh;
   background: radial-gradient(
       circle,
       rgba(0, 0, 0, 0.664) 100%,
